--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,15 @@ Main.txt
 *.i
 *.h~
 *.hci
+*.al
+*.ol
+*.a
+*.o
+*.str1
+*.sym1
+*.sym2
+*.sym3
+
 
 # mikroC PRO for AVR folders and files for ignore
 *.cproj
