--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ desktop.ini
 
 # Personal folders and files for ignore
 _Pending
+Code_GCC
 
 # Proteus folders and files for ignore
 Project Backups
